--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="sobre-mi-container" data-aos="fade-up" data-aos-duration="8000" id="SobreMi">
         <p class="sobre-mi-titulo" >Sobre mí</p>
         <p class="sobre-mi-texto">Soy Rodrigo Cabrera, tengo 28 años y actualmente estoy cursando 4to año de Ingeniería en Transporte, además de estudiar programación de forma autodidacta.</p>
-        <a class="cv-btn" href='https://drive.google.com/file/d/1zT7u8-NODGXtQctdBsJFcD7u2aPPbDK4/view?usp=share_link' target="_blank">Mi CV</a>
+        <a class="cv-btn" href='https://drive.google.com/file/d/1AVRmGg_CP1uz0hnbGKtIQB0fzRmgaffe/view?usp=share_link' target="_blank">Mi CV</a>
       </div>
 
       <div class="conocimientos-container" data-aos="fade-up" data-aos-duration="8000">
@@ -92,8 +92,8 @@
               <p>HTML CSS JS</p>
             </div>
             <div class="card-links">
-              <a class="linkedin" href="#">link</a>
-              <a class="github" href="#">código</a>
+              <a class="linkedin" href="https://portfolio-inky-xi-90.vercel.app/">link</a>
+              <a class="github" href="https://github.com/rocabrera94/Portfolio">código</a>
             </div>
           </div>    
 
